# wastewise

./: .gitignore  LICENSE  README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml
backend/tests/: conftest.py  test_adapters_cache.py  test_adjustment.py  test_api.py  test_baseline.py  test_check_data_sources.py  test_currency.py  test_forecaster.py  test_holidays.py  test_ingest.py  test_integration.py  test_llm.py  test_models.py  test_pipeline.py  test_price_fred.py  test_price_historical.py  test_price_kroger.py  test_price_usda.py  test_rationale.py  test_sourcing.py  test_spoilage.py  test_storage.py  test_weather_noaa.py  test_weather_openmeteo.py  test_whatif.py
backend/wastewise/: api.py  check_data_sources.py  check_llm.py  config.py  currency.py  ingest.py  models.py  pipeline.py  storage.py
backend/wastewise/adapters/: base.py  holidays.py  price_fred.py  price_historical.py  price_kroger.py  price_usda.py  weather_noaa.py  weather_openmeteo.py
backend/wastewise/agents/: adjustment.py  llm.py  rationale.py  sourcing.py  spoilage.py  whatif.py
backend/wastewise/data/: demo_sales.csv  demo_sales_forecast_only.csv
backend/wastewise/forecasting/: baseline.py  features.py  forecaster.py
docs/: AMD_RUNBOOK.md  AMD_USAGE.md  DEPLOY.md  STATUS.md  code-review-2026-07-07-backend.md  deck-outline.md  video-script.md
docs/plans/: 2026-07-07-wastewise-backend.md  2026-07-07-wastewise-frontend.md  2026-07-08-wastewise-deploy.md  (+2 more)
frontend/: .env.example  README.md  package-lock.json  package.json
scripts/: amd_setup.sh
(+54 files in other folders)
