[project]
name = "wastewise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pandas>=2.2",
  "xgboost>=2.0",
  "scikit-learn>=1.4",
  "httpx>=0.27",
  "openai>=1.30",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "respx>=0.21"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
